# ExecRelay

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  GOLAND_IDE_SETUP.md  IDE_QUICK_REFERENCE.md  IDE_SETUP_SUMMARY.md  IDE_TROUBLESHOOTING.md  LICENSE  Makefile  PHASE3_BASELINE.md  README.md  SECURITY.md  STANDALONE_DEPLOYMENT.md  docker-compose.yml  go.mod  go.sum  loadtest-results.txt  renovate.json  ruff.toml
.github/workflows/: app-analytics.yml  app-backtester.yml  app-bridge.yml  app-dxtrade.yml  app-ingress.yml  app-ml-feature-extractor.yml  app-ml-predictor.yml  app-persist.yml  app-portal-api.yml  app-portal-web.yml  app-reports.yml  app-risk.yml  app-tasks.yml  ci.yml  (+10 more)
.run/: 00_All_Services.xml  01_Ingress.xml  02_Bridge.xml  03_DXTrade.xml  04_Persist.xml  05_Portal_API.xml  06_Risk.xml  07_Tasks.xml  08_Analytics.xml  09_Reports.xml  10_Backtester.xml  11_ML_Feature_Extractor.xml  12_ML_Predictor.xml
docs/: ARCHITECTURE.md  ARCHITECTURE_AND_COMPARISON.md  compliance.md  data-model.md  disaster-recovery.md  glossary.md  observability.md  threat-model.md
ea/mt4-ws-dll/: CMakeLists.txt  README.md  build.bat
ea/mt4-ws-dll/cmake/: mingw32.cmake
ea/mt4-ws-dll/src/: ws_dll.cpp
loadtest/: README.md
pine/: Combo_Webhook_Pine.pine  README.md
scripts/: backup.sh  configure-prod.ps1  configure-prod.sh  dr-drill.sh  e2e_demo_matrix.py  ea_shim.py  install-backups.ps1  install-backups.sh  install.ps1  install.sh  lib.ps1  lib.sh  local-stack.sh  minio-mirror.sh
(+194 files in other folders)
